--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mongoose-store",
+  "name": "captains-log",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "seedDB.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
